# proc_macro_examples

compile_time_map/: Cargo.toml
compile_time_map/gen_struct/: Cargo.toml
compile_time_map/gen_struct/src/: lib.rs
compile_time_map/src/: main.rs
