[package]
name = "gen_struct"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2.12"
proc-macro2 = { version = "1" }
quote = "1"
# We need the "full" feature because: https://docs.rs/syn/latest/syn/struct.ItemStruct.html
syn = { version = "2", features = ["full"]}
